hphp/hack/test/typecheck/invalid_php7_anon_fn.php.exp
File "invalid_php7_anon_fn.php", line 4, characters 3-44:
Type annotations should occur before the use() clause (Parsing[1002])
