hphp/hack/test/typecheck/invalid_php7_anon_fn.php
<?hh

function f(): int {
  function() use (): int {
    return 1;
  };
  return 1;
}
